[update] update to v0.4.2
